python 교재 업데이트

--- a/material/python/python_intro.ipynb
+++ b/material/python/python_intro.ipynb
@@ -9941,13 +9941,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J0xaHb_qQn8o"
+        "id": "J0xaHb_qQn8o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "efa32cda-4da4-4a31-d1a8-05fa273623cf"
       },
       "source": [
-        ""
+        "d = { \n",
+        "      \"tom\":30, \n",
+        "      \"jerry\":32, \n",
+        "      \"철수\":25, \n",
+        "      \"영희\":27 \n",
+        "     }\n",
+        "print(d)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'tom': 30, 'jerry': 32, '철수': 25, '영희': 27}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -12902,6 +12920,577 @@
         "## Quiz. people.txt에 이름과 나이 데이터를 추가\n",
         "\n",
         "빈칸이 들어오면 추가 중지."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mNftioeGy6cX"
+      },
+      "source": [
+        "# Quiz. 파일 source.txt를 읽어 합을 sum.txt로 저장\n",
+        "\n",
+        "```\n",
+        "# source.txt\n",
+        "2,3\n",
+        "4,5\n",
+        "7,1\n",
+        "```\n",
+        "\n",
+        "```\n",
+        "# sum.txt\n",
+        "2,3,5\n",
+        "4,5,9\n",
+        "7,1,8\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jlDAcwJlz67p",
+        "outputId": "6844e621-e540-434d-d7ba-7171d3e95a58"
+      },
+      "source": [
+        "%%writefile source.txt\n",
+        "2,3\n",
+        "4,5\n",
+        "7,1"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting source.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RM8F1XhF0pox",
+        "outputId": "fed65d70-e851-4f64-8f21-825e9b18d17d"
+      },
+      "source": [
+        "!cat source.txt"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2,3\n",
+            "4,5\n",
+            "7,1"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hdBmPpUWy7q2",
+        "outputId": "4474b5ca-3eca-4990-ebaf-052e66045548"
+      },
+      "source": [
+        "def show_file(file_name):\n",
+        "  f = open(file_name, \"r\")\n",
+        "  lines = f.readlines()\n",
+        "  f.close()\n",
+        "  for line in lines:\n",
+        "    print(line, end=\"\")\n",
+        "\n",
+        "\n",
+        "f = open(\"source.txt\", \"r\")\n",
+        "lines = f.readlines()\n",
+        "f.close()\n",
+        "\n",
+        "new_lines = []\n",
+        "for line in lines:\n",
+        "  if line.endswith(\"\\n\"):\n",
+        "    line = line[:-1]\n",
+        "  print(line)\n",
+        "  \n",
+        "  values = line.split(\",\")\n",
+        "  answer = int(values[0]) + int(values[1])\n",
+        "  new_line = \",\".join([values[0], values[1], str(answer)])\n",
+        "  new_lines.append(new_line)\n",
+        "\n",
+        "print(new_lines)\n",
+        "\n",
+        "f = open(\"sum.txt\", \"w\")\n",
+        "for line in new_lines:\n",
+        "  f.write(line+\"\\n\")\n",
+        "f.close()\n",
+        "\n",
+        "show_file(\"sum.txt\")\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2,3\n",
+            "4,5\n",
+            "7,1\n",
+            "['2,3,5', '4,5,9', '7,1,8']\n",
+            "2,3,5\n",
+            "4,5,9\n",
+            "7,1,8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NICzxlvlzTPV",
+        "outputId": "8f2d0789-eba2-49ef-9f48-7895fc76807c"
+      },
+      "source": [
+        "def show_file(file_name):\n",
+        "  f = open(file_name, \"r\")\n",
+        "  lines = f.readlines()\n",
+        "  f.close()\n",
+        "  for line in lines:\n",
+        "    print(line, end=\"\")\n",
+        "\n",
+        "\n",
+        "def clean_line(line):\n",
+        "  if line.endswith(\"\\n\"):\n",
+        "    line = line[:-1]\n",
+        "  return line\n",
+        "\n",
+        "def calculate_line(line):\n",
+        "  values = line.split(\",\")\n",
+        "  v1, v2 = int(values[0]), int(values[1])\n",
+        "  answer = v1+v2\n",
+        "  new_values = [ str(v1), str(v2), str(answer) ]\n",
+        "  new_line = \",\".join(new_values)\n",
+        "  return new_line\n",
+        "\n",
+        "\n",
+        "def read_source(file_name):\n",
+        "  f = open(file_name, \"r\")\n",
+        "  lines = f.readlines()\n",
+        "  f.close()\n",
+        "  return lines\n",
+        "\n",
+        "def calculate_lines(lines):\n",
+        "  new_lines = []\n",
+        "  for line in lines:\n",
+        "    line = clean_line(line)\n",
+        "    new_line = calculate_line(line)\n",
+        "    new_lines.append(new_line)\n",
+        "  return new_lines\n",
+        "\n",
+        "\n",
+        "def write_to_file(file_name, new_lines):\n",
+        "  f = open(file_name, \"w\")\n",
+        "  for line in new_lines:\n",
+        "    f.write(line+\"\\n\")\n",
+        "  f.close()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "lines = read_source(\"source.txt\")\n",
+        "# lines = ['2,3\\n', '4,5\\n', '7,1']\n",
+        "\n",
+        "new_lines = calculate_lines(lines)\n",
+        "# new_lines = ['2,3,5', '4,5,9', '7,1,8']\n",
+        "\n",
+        "write_to_file(\"some.txt\", new_lines)\n",
+        "\n",
+        "show_file(\"sum.txt\")\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2,3,5\n",
+            "4,5,9\n",
+            "7,1,8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XrJEVORs1B1U"
+      },
+      "source": [
+        "# Quiz. name.txt의 이름을 읽어\n",
+        "\n",
+        "```\n",
+        "# name.txt\n",
+        "Tom\n",
+        "Jerry\n",
+        "철수\n",
+        "영희\n",
+        "```\n",
+        "\n",
+        "다음과 같이 나이를 사용자 입력으로 받고\n",
+        "```\n",
+        "\"Tom의 나이는? \" 30\n",
+        "\"Jerry의 나이는? \" 33\n",
+        "\n",
+        "```\n",
+        "\n",
+        "화면에 출력\n",
+        "```\n",
+        "Tom,30\n",
+        "Jerry,33\n",
+        "철수,25\n",
+        "영희,23\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VzGVqHLe1Gdb",
+        "outputId": "96136376-9e1f-4222-bd3a-3f3018fe1cfd"
+      },
+      "source": [
+        "%%writefile name.txt \n",
+        "Tom\n",
+        "Jerry\n",
+        "철수\n",
+        "영희"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing name.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7cXGwAZh1Khf",
+        "outputId": "5a3c5ccd-e14e-4789-f99d-798924cca634"
+      },
+      "source": [
+        "!cat name.txt"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tom\n",
+            "Jerry\n",
+            "철수\n",
+            "영희"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jrJmTDjz1h4J"
+      },
+      "source": [
+        "코드 설계\n",
+        "```\n",
+        "# task.0 source.txt 파일을 만들어 둔다.\n",
+        "\n",
+        "# task.1 source.txt에서 파일을 읽어서 다음 리스트를 구하기\n",
+        "names = [ \"Tom\", \"Jerry\", \"철수\", \"영희\"]\n",
+        "\n",
+        "# task.2 for 루프를 돌면서 input으로 age를 받고 다음 dict를 만들기\n",
+        "age_map = { \"Tom\":30, \"Jerry\":33, \"철수\":25, \"영희\":23 }\n",
+        "\n",
+        "# task.3 for 루프를 돌면서 다음 문자열을 만들기\n",
+        "out_lines = [ \"Tom,30\", \"Jerry,33\", \"철수,25\", \"영희,23\" ]\n",
+        "\n",
+        "# task.4 for 루프를 돌면서 리스트 항목을 출력하기\n",
+        "\n",
+        "# task.4-2 for 루프를 돌면서 리스트를 name_and_age.txt에 출력하기\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "acVQEkUDYnLi",
+        "outputId": "cd0e4ca6-055b-4246-8955-0177dad82578"
+      },
+      "source": [
+        "# task.1\n",
+        "f = open(\"name.txt\", \"r\")\n",
+        "lines = f.readlines()\n",
+        "f.close()\n",
+        "\n",
+        "names = []\n",
+        "for line in lines:\n",
+        "  names.append(line[:-1])\n",
+        "\n",
+        "print(names)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Tom', 'Jerry', '철수', '영']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "noX1FkOVYG-U",
+        "outputId": "136e92c8-3793-402d-f758-b7dfbfe6ff7f"
+      },
+      "source": [
+        "# task.2\n",
+        "names = [ \"Tom\", \"Jerry\", \"철수\", \"영희\"]\n",
+        "# age_map = { \"Tom\":30, \"Jerry\":33, \"철수\":25, \"영희\":23 }\n",
+        "\n",
+        "age_map = {}\n",
+        "for name in names:\n",
+        "  age = input(\"{}의 나이는? \".format(name))\n",
+        "  age = int(age)\n",
+        "  age_map[name] = age\n",
+        "\n",
+        "print(age_map)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tom의 나이는? 30\n",
+            "Jerry의 나이는? 33\n",
+            "철수의 나이는? 25\n",
+            "영희의 나이는? 23\n",
+            "{'Tom': 30, 'Jerry': 33, '철수': 25, '영희': 23}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j2VuMmMnXWOE",
+        "outputId": "2e196fbd-abca-433d-a5d8-5e89722e2f4c"
+      },
+      "source": [
+        "# task.3\n",
+        "age_map = { \"Tom\":30, \"Jerry\":33, \"철수\":25, \"영희\":23 }\n",
+        "# out_lines = [ \"Tom,30\", \"Jerry,33\", \"철수,25\", \"영희,23\" ]\n",
+        "\n",
+        "out_lines = []\n",
+        "for key, value in age_map.items():\n",
+        "  out_lines.append(\"{},{}\".format(key,value))\n",
+        "\n",
+        "print(out_lines)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Tom,30', 'Jerry,33', '철수,25', '영희,23']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "omhQSCmIXMOl",
+        "outputId": "8231f6ee-ccbc-4216-bacb-4eaf3bd1c2d4"
+      },
+      "source": [
+        "# task.4\n",
+        "out_lines = [ \"Tom,30\", \"Jerry,33\", \"철수,25\", \"영희,23\" ]\n",
+        "\n",
+        "for a_line in out_lines:\n",
+        "  print(a_line)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tom,30\n",
+            "Jerry,33\n",
+            "철수,25\n",
+            "영희,23\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WRYhI7tbd-Iu",
+        "outputId": "f8cce76d-4b29-463a-bd87-8001bb7a8a96"
+      },
+      "source": [
+        "# task.4-2\n",
+        "out_lines = [ \"Tom,30\", \"Jerry,33\", \"철수,25\", \"영희,23\" ]\n",
+        "\n",
+        "f = open(\"name_and_age.txt\", \"w\")\n",
+        "for a_line in out_lines:\n",
+        "  f.write(a_line+\"\\n\")\n",
+        "f.close()\n",
+        "\n",
+        "show_file(\"name_and_age.txt\")"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tom,30\n",
+            "Jerry,33\n",
+            "철수,25\n",
+            "영희,23\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ntu5k2ECZvD_",
+        "outputId": "92a47458-f3a5-4cec-9edc-32c6f2fe468d"
+      },
+      "source": [
+        "# task.1\n",
+        "f = open(\"name.txt\", \"r\")\n",
+        "lines = f.readlines()\n",
+        "f.close()\n",
+        "\n",
+        "names = []\n",
+        "for line in lines:\n",
+        "  names.append(line[:-1])\n",
+        "\n",
+        "# print(names)\n",
+        "\n",
+        "# task.2\n",
+        "# names = [ \"Tom\", \"Jerry\", \"철수\", \"영희\"]\n",
+        "# age_map = { \"Tom\":30, \"Jerry\":33, \"철수\":25, \"영희\":23 }\n",
+        "\n",
+        "age_map = {}\n",
+        "for name in names:\n",
+        "  age = input(\"{}의 나이는? \".format(name))\n",
+        "  age = int(age)\n",
+        "  age_map[name] = age\n",
+        "\n",
+        "# print(age_map)\n",
+        "\n",
+        "# task.3\n",
+        "# age_map = { \"Tom\":30, \"Jerry\":33, \"철수\":25, \"영희\":23 }\n",
+        "# out_lines = [ \"Tom,30\", \"Jerry,33\", \"철수,25\", \"영희,23\" ]\n",
+        "\n",
+        "out_lines = []\n",
+        "for key, value in age_map.items():\n",
+        "  out_lines.append(\"{},{}\".format(key,value))\n",
+        "\n",
+        "# print(out_lines)\n",
+        "\n",
+        "# task.4\n",
+        "# out_lines = [ \"Tom,30\", \"Jerry,33\", \"철수,25\", \"영희,23\" ]\n",
+        "\n",
+        "for a_line in out_lines:\n",
+        "  print(a_line)\n",
+        "\n",
+        "# task.4-2\n",
+        "# out_lines = [ \"Tom,30\", \"Jerry,33\", \"철수,25\", \"영희,23\" ]\n",
+        "\n",
+        "f = open(\"name_and_age.txt\", \"w\")\n",
+        "for a_line in out_lines:\n",
+        "  f.write(a_line+\"\\n\")\n",
+        "f.close()\n",
+        "\n",
+        "show_file(\"name_and_age.txt\")  "
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tom의 나이는? 30\n",
+            "Jerry의 나이는? 33\n",
+            "철수의 나이는? 25\n",
+            "영의 나이는? 23\n",
+            "Tom,30\n",
+            "Jerry,33\n",
+            "철수,25\n",
+            "영,23\n",
+            "Tom,30\n",
+            "Jerry,33\n",
+            "철수,25\n",
+            "영,23\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
