실습내용 추가.

--- a/material/python/practice/python_평가문제.ipynb
+++ b/material/python/practice/python_평가문제.ipynb
@@ -137,7 +137,7 @@
       },
       "source": [
         "# Quiz.2\n",
-        "다음과 같은 사용자 입력을 받아 사칙 수행하고 그 결과를 출력.\n",
+        "다음과 같은 사용자 입력을 받아 계산하고 그 결과를 출력.\n",
         "\n",
         "```\n",
         "사용자 입력 : 1+2\n",
@@ -209,10 +209,10 @@
         "raw_data는 다음과 같다.\n",
         "\n",
         "```\n",
-        "0,170,강서구,23\n",
+        "0,170,강서구,23,B\n",
         "1,165,서초구,22,A\n",
         "2,177,,25,O\n",
-        "3,172,강남구,,B\n",
+        "3,172,강서구,,B\n",
         "4,166,마포구,26,AB\n",
         "```\n",
         "\n",
@@ -234,7 +234,7 @@
         "\n",
         "위 데이터의 경우 다음과 같다. 리스트 값들의 순서는 무시한다. 값이 없는 경우는 무시한다.\n",
         "```\n",
-        "[ '서초구', '마포구', '강남구' ]\n",
+        "[ '서초구', '마포구', '강서구' ]\n",
         "```\n",
         "\n"
       ]
@@ -245,7 +245,7 @@
         "id": "BGm7CM877bAQ"
       },
       "source": [
-        "raw_data=\"\"\"0,170,강서구,23\n",
+        "raw_data=\"\"\"0,170,강서구,23,B\n",
         "1,165,서초구,22,A\n",
         "2,177,,25,O\n",
         "3,172,강남구,,B\n",
@@ -386,7 +386,7 @@
         "print(\"length=6, symbol=$ : $$$$$$\")\n",
         "print(\"length=2, symbol=# : ##\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
