평가문제 업데이트

--- a/material/python/practice/python_평가문제.ipynb
+++ b/material/python/practice/python_평가문제.ipynb
@@ -427,6 +427,116 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aJOIw09-uRTd"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PGgB4AXIuRPF"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jd8QU1beuRKr"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_ZfEIrYuuT0I"
+      },
+      "source": [
+        "# Quiz. 6\n",
+        "\n",
+        "다음 코드는 2의배수만 추려서 절대값을 구하고 2배하고 이를 소팅한 코드이다.\n",
+        "\n",
+        "리스트 표현식을 사용하여 for 구문 없이 같은 출력을 내도록 한다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mD5GukHOudt5",
+        "outputId": "f0375cf6-9277-42ba-9e95-1034270fedf9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "l = [4, -2, -3, 6, 4, -8, 9, 10]\n",
+        "\n",
+        "l2 = []\n",
+        "for i in l:\n",
+        "  if i%2==0:\n",
+        "    l2.append(abs(i)*2)\n",
+        "l2.sort()\n",
+        "print(l2)\n",
+        "    "
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4, 8, 8, 12, 16, 20]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hFwS05LLvQKD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NCMND0BivQB9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OIJslExYvP47"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
