--- a/material/python/python_for_deep_learning.ipynb
+++ b/material/python/python_for_deep_learning.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "python_intro.ipynb",
+      "name": "python_for_deep_learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -14,6 +14,15 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ol2Gs9Nikg01"
+      },
+      "source": [
+        "# Python for Deep Learning"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -9956,7 +9965,7 @@
         "     }\n",
         "print(d)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12960,7 +12969,7 @@
         "4,5\n",
         "7,1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12983,7 +12992,7 @@
       "source": [
         "!cat source.txt"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13040,7 +13049,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13125,7 +13134,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13186,7 +13195,7 @@
         "철수\n",
         "영희"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13209,7 +13218,7 @@
       "source": [
         "!cat name.txt"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13269,7 +13278,7 @@
         "\n",
         "print(names)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13302,7 +13311,7 @@
         "\n",
         "print(age_map)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13337,7 +13346,7 @@
         "\n",
         "print(out_lines)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13364,7 +13373,7 @@
         "for a_line in out_lines:\n",
         "  print(a_line)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13398,7 +13407,7 @@
         "\n",
         "show_file(\"name_and_age.txt\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13471,7 +13480,7 @@
         "\n",
         "show_file(\"name_and_age.txt\")  "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
