CNN 실습자료 업데이트

--- a/material/deep_learning/mnist_cnn.ipynb
+++ b/material/deep_learning/mnist_cnn.ipynb
@@ -5,45 +5,19 @@
     "colab": {
       "name": "mnist_cnn.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "i49T67OoqXiU",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "9e47c0b0-0740-428b-ea68-9a2c4f56610b"
-      },
-      "source": [
-        "%tensorflow_version 1.x"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 1.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "c503DSvxvOU5",
-        "colab_type": "text"
+        "id": "c503DSvxvOU5"
       },
       "source": [
         "# 이전 DNN 코드"
@@ -52,9 +26,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G8M2QsSUxGZn",
-        "colab_type": "code",
-        "colab": {}
+        "id": "G8M2QsSUxGZn"
       },
       "source": [
         "import numpy as np\n",
@@ -73,9 +45,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "98Ly9UIFxIjO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "98Ly9UIFxIjO"
       },
       "source": [
         "(raw_train_x, raw_train_y), (raw_test_x, raw_test_y) = tf.keras.datasets.mnist.load_data()\n",
@@ -93,7 +63,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "gZ-hK0S5xIl7",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 625
@@ -178,8 +147,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cHcZ3XNF2qkV",
-        "colab_type": "text"
+        "id": "cHcZ3XNF2qkV"
       },
       "source": [
         "# CNN"
@@ -188,9 +156,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fYlMkT8axIoi",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vP9m1uS2fxj1"
       },
       "source": [
         "import numpy as np\n",
@@ -199,7 +165,7 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import optimizers\n",
-        "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D, Input\n",
+        "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D, Input, Reshape\n",
         "\n",
         "import time"
       ],
@@ -209,19 +175,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "puN5QRLz2toU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "h-Hlstlof5l6"
       },
       "source": [
         "(raw_train_x, raw_train_y), (raw_test_x, raw_test_y) = tf.keras.datasets.mnist.load_data()\n",
         "\n",
         "train_x = raw_train_x/255\n",
         "test_x = raw_test_x/255\n",
-        "\n",
-        "# Conv2D는 width*height*channel을 입력으로 받음\n",
-        "train_x = train_x.reshape((60000, 28, 28, 1)) # ADDED\n",
-        "test_x = test_x.reshape((10000, 28, 28, 1)) # ADDED\n",
         "\n",
         "train_y = raw_train_y\n",
         "test_y = raw_test_y"
@@ -232,19 +192,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cuW2ftNT2trB",
-        "colab_type": "code",
+        "id": "nRkSjvdSkgfc",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 674
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "53e734f9-1dd3-400a-944d-885191e3e333"
+        "outputId": "504b72e4-1e85-489c-bec8-d3fcd08b34be"
       },
       "source": [
-        "\n",
         "model = keras.Sequential()\n",
-        "# model.add(Input((28,28)))\n",
-        "model.add(Input((28,28,1)))\n",
+        "model.add(Input((28,28)))\n",
+        "model.add(Reshape((28,28,1))) # ADDED\n",
         "model.add(Conv2D(32, (3, 3))) # ADDED\n",
         "model.add(MaxPooling2D((2, 2))) # ADDED\n",
         "model.add(Conv2D(64, (3, 3))) # ADDED\n",
@@ -253,6 +210,7 @@
         "model.add(Dense(10, activation='relu'))\n",
         "model.add(Dense(10, activation='relu'))\n",
         "model.add(Dense(10, activation='softmax'))\n",
+        "\n",
         "\n",
         "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
         "model.summary()\n",
@@ -275,43 +233,46 @@
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "WARNING:tensorflow:Please add `keras.layers.InputLayer` instead of `keras.Input` to Sequential model. `keras.Input` is intended to be used by Functional model.\n",
+            "Model: \"sequential_4\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d (Conv2D)              (None, 26, 26, 32)        320       \n",
+            "reshape (Reshape)            (None, 28, 28, 1)         0         \n",
             "_________________________________________________________________\n",
-            "max_pooling2d (MaxPooling2D) (None, 13, 13, 32)        0         \n",
+            "conv2d_6 (Conv2D)            (None, 26, 26, 32)        320       \n",
             "_________________________________________________________________\n",
-            "conv2d_1 (Conv2D)            (None, 11, 11, 64)        18496     \n",
+            "max_pooling2d_6 (MaxPooling2 (None, 13, 13, 32)        0         \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+            "conv2d_7 (Conv2D)            (None, 11, 11, 64)        18496     \n",
             "_________________________________________________________________\n",
-            "flatten_1 (Flatten)          (None, 1600)              0         \n",
+            "max_pooling2d_7 (MaxPooling2 (None, 5, 5, 64)          0         \n",
             "_________________________________________________________________\n",
-            "dense_3 (Dense)              (None, 10)                16010     \n",
+            "flatten_4 (Flatten)          (None, 1600)              0         \n",
             "_________________________________________________________________\n",
-            "dense_4 (Dense)              (None, 10)                110       \n",
+            "dense_12 (Dense)             (None, 10)                16010     \n",
             "_________________________________________________________________\n",
-            "dense_5 (Dense)              (None, 10)                110       \n",
+            "dense_13 (Dense)             (None, 10)                110       \n",
+            "_________________________________________________________________\n",
+            "dense_14 (Dense)             (None, 10)                110       \n",
             "=================================================================\n",
             "Total params: 35,046\n",
             "Trainable params: 35,046\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "Epoch 1/5\n",
-            "60000/60000 [==============================] - 41s 684us/sample - loss: 0.4526 - acc: 0.8554\n",
+            "469/469 [==============================] - 51s 106ms/step - loss: 0.6707 - accuracy: 0.7919\n",
             "Epoch 2/5\n",
-            "60000/60000 [==============================] - 41s 683us/sample - loss: 0.1474 - acc: 0.9554\n",
+            "469/469 [==============================] - 45s 96ms/step - loss: 0.2102 - accuracy: 0.9399\n",
             "Epoch 3/5\n",
-            "60000/60000 [==============================] - 41s 685us/sample - loss: 0.1092 - acc: 0.9668\n",
+            "469/469 [==============================] - 45s 95ms/step - loss: 0.1335 - accuracy: 0.9615\n",
             "Epoch 4/5\n",
-            "60000/60000 [==============================] - 41s 688us/sample - loss: 0.0891 - acc: 0.9730\n",
+            "469/469 [==============================] - 47s 99ms/step - loss: 0.1014 - accuracy: 0.9695\n",
             "Epoch 5/5\n",
-            "60000/60000 [==============================] - 41s 689us/sample - loss: 0.0771 - acc: 0.9767\n",
-            "10000/10000 [==============================] - 3s 277us/sample - loss: 0.0674 - acc: 0.9783\n",
-            "loss= 0.06738936487701722\n",
-            "acc= 0.9783\n",
+            "469/469 [==============================] - 46s 98ms/step - loss: 0.0869 - accuracy: 0.9738\n",
+            "313/313 [==============================] - 3s 10ms/step - loss: 0.0794 - accuracy: 0.9766\n",
+            "loss= 0.07944491505622864\n",
+            "acc= 0.9765999913215637\n",
             "[7 2 1 ... 4 5 6]\n"
           ],
           "name": "stdout"
@@ -321,8 +282,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ky74zSK9D71P",
-        "colab_type": "text"
+        "id": "ky74zSK9D71P"
       },
       "source": [
         "conv2d 레이어의 파라매터 수는 다음에 의해서 결정된다.\n",
@@ -352,9 +312,137 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nRkSjvdSkgfc",
-        "colab_type": "code",
-        "colab": {}
+        "id": "p2J1Y6VSf8qG"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z5B0uPv21ttC"
+      },
+      "source": [
+        "# 영상 데이터 분류 CNN Template"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uTQwZZoR1wyT",
+        "outputId": "e3919639-ffc9-4dab-d1df-64581121685f"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import optimizers\n",
+        "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D, Input, Reshape\n",
+        "\n",
+        "import time\n",
+        "\n",
+        "(raw_train_x, raw_train_y), (raw_test_x, raw_test_y) = tf.keras.datasets.mnist.load_data()\n",
+        "\n",
+        "train_x = raw_train_x/255\n",
+        "test_x = raw_test_x/255\n",
+        "\n",
+        "train_y = raw_train_y\n",
+        "test_y = raw_test_y\n",
+        "\n",
+        "model = keras.Sequential()\n",
+        "model.add(Input((28,28)))\n",
+        "model.add(Reshape((28,28,1)))\n",
+        "model.add(Conv2D(32, (3, 3)))\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "model.add(Conv2D(64, (3, 3)))\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(10, activation='relu'))\n",
+        "model.add(Dense(10, activation='relu'))\n",
+        "model.add(Dense(10, activation='softmax'))\n",
+        "\n",
+        "\n",
+        "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
+        "model.summary()\n",
+        "\n",
+        "\n",
+        "model.fit(train_x, train_y, epochs=5, verbose=1, batch_size=128)\n",
+        "\n",
+        "\n",
+        "loss, acc = model.evaluate(test_x, test_y)\n",
+        "print(\"loss=\",loss)\n",
+        "print(\"acc=\",acc)\n",
+        "\n",
+        "y_ = model.predict(test_x)\n",
+        "predicted = np.argmax(y_, axis=1)\n",
+        "\n",
+        "print(predicted)\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n",
+            "WARNING:tensorflow:Please add `keras.layers.InputLayer` instead of `keras.Input` to Sequential model. `keras.Input` is intended to be used by Functional model.\n",
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "reshape (Reshape)            (None, 28, 28, 1)         0         \n",
+            "_________________________________________________________________\n",
+            "conv2d (Conv2D)              (None, 26, 26, 32)        320       \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d (MaxPooling2D) (None, 13, 13, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_1 (Conv2D)            (None, 11, 11, 64)        18496     \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+            "_________________________________________________________________\n",
+            "flatten (Flatten)            (None, 1600)              0         \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 10)                16010     \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 10)                110       \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 10)                110       \n",
+            "=================================================================\n",
+            "Total params: 35,046\n",
+            "Trainable params: 35,046\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "Epoch 1/5\n",
+            "469/469 [==============================] - 56s 118ms/step - loss: 0.5551 - accuracy: 0.8262\n",
+            "Epoch 2/5\n",
+            "469/469 [==============================] - 42s 89ms/step - loss: 0.1448 - accuracy: 0.9573\n",
+            "Epoch 3/5\n",
+            "469/469 [==============================] - 43s 91ms/step - loss: 0.0972 - accuracy: 0.9714\n",
+            "Epoch 4/5\n",
+            "469/469 [==============================] - 43s 92ms/step - loss: 0.0756 - accuracy: 0.9779\n",
+            "Epoch 5/5\n",
+            "469/469 [==============================] - 42s 89ms/step - loss: 0.0649 - accuracy: 0.9804\n",
+            "313/313 [==============================] - 3s 9ms/step - loss: 0.0672 - accuracy: 0.9785\n",
+            "loss= 0.06722691655158997\n",
+            "acc= 0.9785000085830688\n",
+            "[7 2 1 ... 4 5 6]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4eait6xD3-Hv"
       },
       "source": [
         ""
