--- a/material/deep_learning/dnn_iris_classification.ipynb
+++ b/material/deep_learning/dnn_iris_classification.ipynb
@@ -569,7 +569,7 @@
       "source": [
         "# iris_dnn with category index\n",
         "\n",
-        "아래의 코드는 iris_dnn_and_optimizer.ipynb의 코드를 기반으로 한다.\n"
+        "아래의 코드는 dnn_iris_and_optimizer.ipynb의 코드를 기반으로 한다.\n"
       ]
     },
     {
