callback 자료 사알짝 수정

--- a/material/deep_learning/dnn_in_keras_callback.ipynb
+++ b/material/deep_learning/dnn_in_keras_callback.ipynb
@@ -228,6 +228,7 @@
         "# copy from https://gist.github.com/stared/dfb4dfaf6d9a8501cd1cc8b8cb806d2e\n",
         "\n",
         "from IPython.display import clear_output\n",
+        "from tensorflow.keras.callbacks import Callback\n",
         "\n",
         "class PlotLosses(Callback):\n",
         "\n",
